[package]
name = "actix-web-error-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nerixyz/actix-web-error"
readme = "../README.md"
keywords = ["error", "derive", "actix-web", "http"]
categories = ["web-programming"]
description = "Derive macros for actix-web-error"
authors = ["Nerixyz"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
http = "0.2"